refactor display code so we can test them